[tool.poetry]
name = "pyWirelessMbus"
version = "v1.5.3"
description = "A tool to receive and send Wireless-M-Bus messages."
authors = ["Karl Wolffgang <karl_eugen.wolffgang@tu-dresden.de>", 
    "Martin Altenburger <martin.altenburger@tu-dresden.de>"]
license = "MIT License"
classifiers = [
        "Development Status :: 3 - Alpha",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.7",
        "License :: OSI Approved :: MIT License",
        "Intended Audience :: Developers",
        "Operating System :: Unix",
        "Operating System :: POSIX",
    ]
homepage = "https://github.com/gewv-tu-dresden/pyWirelessMbus"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
pyserial = "^3.5"
pyserial-asyncio = "^0.6"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]
mypy = "^0.991"
black = "^21.4b1"
rope = "^0.17.0"
pylint = "^2.6.0"
pytest = "^6.0.1"
commitizen = "^2.1.0"
flake8 = "^3.8.3"
pytest-asyncio = "^0.14.0"
twine = "^4.0.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
